cmcasset/objects/CMC_Asset__c.object
<CustomObject>
    <description>Asset in the CMC Cloud Asset Library</description>
    <fields>
        <fullName>Appirio_Audience__c</fullName>
        <description>This represents all apps that this asset touches</description>
        <inlineHelpText>This represents all apps that this asset touches.</inlineHelpText>
        <label>Applications Integrated</label>
        <picklist>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Django</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FullContact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netsuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Appirio_Services_Practice__c</fullName>
        <description>Allows Assets to be filtered by which practice they are relevant to.</description>
        <inlineHelpText>Select the Appirio service practice(s) where this asset is relevant.</inlineHelpText>
        <label>Appirio Services Practice</label>
        <picklist>
            <picklistValues>
                <fullName>Cloud Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workday</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Asset_Location__c</fullName>
        <description>URL at which this asset can be retrieved (e.g., SVN, wiki, Google Doc, etc.)</description>
        <inlineHelpText>URL at which this asset can be retrieved (e.g., SVN, wiki, Google Doc, etc.)</inlineHelpText>
        <label>Asset Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Asset_Maturity_Level__c</fullName>
        <description>Classification level to differentiate between assets submitted from the field as is and ones with increased review and product management.</description>
        <inlineHelpText>Classification level to differentiate between assets submitted from the field as is and ones with increased review and product management.</inlineHelpText>
        <label>Asset Maturity Level</label>
        <picklist>
            <picklistValues>
                <fullName>As-Is (Level 1)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Audited (Level 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tested (Level 3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified (Level 4)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Platform__c</fullName>
        <description>The primary platform the asset is built on.</description>
        <inlineHelpText>The primary platform the asset is built on.</inlineHelpText>
        <label>Asset Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple OSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cast Iron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google App Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux/UNIX/BSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MySQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VmForce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Source_Channel__c</fullName>
        <description>This is the source that created the IP that comprises this asset</description>
        <inlineHelpText>Primary source / channel whereby this asset came to be at Appirio.</inlineHelpText>
        <label>Asset Source / Channel</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appirio Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CloudSpokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metacube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-contractor (Onshore)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Asset_SubType__c</fullName>
        <description>Fine-grained asset categorization</description>
        <inlineHelpText>Fine-grained asset categorization</inlineHelpText>
        <label>Asset SubType</label>
        <picklist>
            <controllingField>Asset_Type__c</controllingField>
            <picklistValues>
                <fullName>3rd Party Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>Coarse asset categorization.</description>
        <inlineHelpText>Coarse asset categorization.</inlineHelpText>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Detailed description that will eventually be referenced in search along with the name and the short description.</description>
        <inlineHelpText>Detailed description that answers:
How can your asset be used?
What can it do? 
What business or technical problem can it solve?</inlineHelpText>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External reference id for this asset.</description>
        <externalId>true</externalId>
        <inlineHelpText>External reference id for this asset.</inlineHelpText>
        <label>External Id</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implements_Open_Source__c</fullName>
        <description>Open source flag</description>
        <inlineHelpText>Does this asset contain any Open Source or 3rd party technology?</inlineHelpText>
        <label>Implements Open Source?</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Priority__c</fullName>
        <description>Simple prioritization mechanism for Candidate Assets to determine the assets that would potentially be most useful for our customers / team</description>
        <inlineHelpText>Prioritize this Candidate Asset for further development based on its value to our customers / team</inlineHelpText>
        <label>Internal Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Review_Notes__c</fullName>
        <label>Internal Review Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this asset active and available to use?</description>
        <inlineHelpText>Is this asset active and available to use?</inlineHelpText>
        <label>Active? (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPublic?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Status__c</fullName>
        <description>Status of legal review of this asset.</description>
        <inlineHelpText>Status of legal review of this asset.</inlineHelpText>
        <label>Legal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Reviewed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Uses__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of other stories for which this asset has been used to help implement.</description>
        <inlineHelpText>Number of other stories for which this asset has been used to help implement.</inlineHelpText>
        <label>Number of Reuses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_SFDC_ID__c</fullName>
        <description>Used only for re-importing Assets from pre CMC. Can delete afterwards.</description>
        <externalId>true</externalId>
        <inlineHelpText>Used only for re-importing Assets from pre CMC. Can delete afterwards.</inlineHelpText>
        <label>Old SFDC ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Source_Implementation_Type__c</fullName>
        <inlineHelpText>&quot;Code = The Asset contains code that falls under an Open Source license
Library = The Asset implements an Open Source Library e.g. jQuery&quot;</inlineHelpText>
        <label>Open Source Implementation Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libraries</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Open_Source_License__c</fullName>
        <description>Type of open source license.  This information is critical to the process of approving the submission of an asset, as well as the usage of an asset that contains any open source</description>
        <inlineHelpText>What type(s) of open source licenses are involved?</inlineHelpText>
        <label>Open Source License</label>
        <picklist>
            <picklistValues>
                <fullName>Apache-2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD-2 Clause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD-3 Clause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDDL-1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPL-1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPL-2.0</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preview_Media_Type__c</fullName>
        <description>Format of the media (screenshot, video tutorial) to be used to preview the asset.</description>
        <inlineHelpText>Format of the media (screenshot, video tutorial) to be used to preview the asset.</inlineHelpText>
        <label>Preview Media Type</label>
        <picklist>
            <picklistValues>
                <fullName>jpg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>png</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>swf</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preview_Media_URL__c</fullName>
        <description>URL of the screenshot or video allowing others to preview the asset.</description>
        <inlineHelpText>URL of the screenshot or video allowing others to preview the asset.</inlineHelpText>
        <label>Preview Media URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Release_Stage__c</fullName>
        <description>Asset release process</description>
        <inlineHelpText>Stages in the process of releasing an Asset.  All Assets will enter as Candidates, and be reviewed by the CAL team.  Only Active Assets will be posted to Chatter, and be available in Asset search.</inlineHelpText>
        <label>Release Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Candidate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Short Description of the Asset. Visible in search results and list views.</description>
        <inlineHelpText>Short Description of the Asset. Visible in search results and list views.</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technologies__c</fullName>
        <description>This represents all technologies used in the development of this asset</description>
        <inlineHelpText>Indicate all technologies used in the development of this asset</inlineHelpText>
        <label>Technologies</label>
        <picklist>
            <picklistValues>
                <fullName>.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clojure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Django</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erlang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTML5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JavaScript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jQuery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jQuery Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MySQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node.js</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NoSQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAuth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objective-C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhoneGap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Play</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostgeSQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Python</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REST API</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tips_and_Tricks__c</fullName>
        <description>Tips and Tricks and general implementation instructions needed to make this asset work</description>
        <inlineHelpText>Tips and Tricks and general implementation instructions needed to make this asset work</inlineHelpText>
        <label>Tips and Tricks / Instructions</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <description>Total number of hours put into the development of this asset across all contributors.</description>
        <inlineHelpText>Total number of hours put into the development of this asset across all contributors.</inlineHelpText>
        <label>Total Hours</label>
        <summarizedField>CMC_Asset_Contributor__c.Hours_Contributed__c</summarizedField>
        <summaryForeignKey>CMC_Asset_Contributor__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Free text for now, until a more robust versioning model is in place.</description>
        <inlineHelpText>Version of this asset.  A separate asset should be created for each version.</inlineHelpText>
        <label>Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asset_Type__c</columns>
        <columns>Asset_Platform__c</columns>
        <columns>Asset_Maturity_Level__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_Stage__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CloudSpokes_Assets</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Asset_Maturity_Level__c</columns>
        <columns>Asset_Type__c</columns>
        <columns>Asset_Platform__c</columns>
        <columns>Version__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Preview_Media_URL__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Asset_Location__c</field>
            <operation>contains</operation>
            <value>cs-production/challenges</value>
        </filters>
        <filters>
            <field>Short_Description__c</field>
            <operation>contains</operation>
            <value>Cloudspokes</value>
        </filters>
        <label>CloudSpokes Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Google_Assets</fullName>
        <columns>NAME</columns>
        <columns>Asset_Type__c</columns>
        <columns>Asset_Platform__c</columns>
        <columns>Version__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Preview_Media_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Asset_Platform__c</field>
            <operation>contains</operation>
            <value>google</value>
        </filters>
        <label>Google Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Popular_Assets</fullName>
        <columns>NAME</columns>
        <columns>Asset_Type__c</columns>
        <columns>Asset_Platform__c</columns>
        <columns>Version__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Preview_Media_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Uses__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Popular Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recent_Assets</fullName>
        <columns>NAME</columns>
        <columns>Asset_Type__c</columns>
        <columns>Asset_Platform__c</columns>
        <columns>Version__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Preview_Media_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Recently Added Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Workday_Assets2</fullName>
        <columns>NAME</columns>
        <columns>Asset_Type__c</columns>
        <columns>Version__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Preview_Media_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Asset_Platform__c</field>
            <operation>contains</operation>
            <value>work,Workday</value>
        </filters>
        <label>Workday Assets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Asset_Platform_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(  Asset_Platform__c  ) )</errorConditionFormula>
        <errorDisplayField>Asset_Platform__c</errorDisplayField>
        <errorMessage>Asset Platform is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Asset_name_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISBLANK( Name ) ,  ISNULL(Name) )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please Enter Asset Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Legal_status</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT( Legal_Status__c ) )</errorConditionFormula>
        <errorDisplayField>Legal_Status__c</errorDisplayField>
        <errorMessage>Legal status is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Media_Type_Required_if_Media_URL_Entered</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISBLANK( Preview_Media_URL__c)), ISBLANK(  TEXT(Preview_Media_Type__c) ))</errorConditionFormula>
        <errorDisplayField>Preview_Media_Type__c</errorDisplayField>
        <errorMessage>You must select a Media Type when populating Media URL.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Platform_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR (ISBLANK(Text( Asset_Platform__c )), ISNULL(Text( Asset_Platform__c )))</errorConditionFormula>
        <errorDisplayField>Asset_Platform__c</errorDisplayField>
        <errorMessage>Platform is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Short_Description_Requirement</fullName>
        <active>true</active>
        <description>Short description is a required field</description>
        <errorConditionFormula>OR (ISBLANK( Short_Description__c ),  ISNULL(Short_Description__c))</errorConditionFormula>
        <errorDisplayField>Short_Description__c</errorDisplayField>
        <errorMessage>Please enter a short description.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Text(Asset_Type__c))</errorConditionFormula>
        <errorDisplayField>Asset_Type__c</errorDisplayField>
        <errorMessage>Type is a required field.</errorMessage>
    </validationRules>
</CustomObject>